--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
     "lucide-react": "^0.396.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/git-repo-name": "^1.0.4",
     "@types/node": "^20.14.7",
     "@types/react": "^18.3.3",
