--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "clsx": "^2.1.1",
     "firebase": "^11.4.0",
     "lucide-react": "^0.396.0",
+    "nanoid": "^5.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-router": "^6.23.1",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.30.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
